# diskspace

./: .travis.yml  Cargo.toml  Makefile.toml  README.md
.deb/: control
.rpm/: diskspace.spec
.zip/: zip.ps1
learning/: ds1.rs  ds2.rs  ds3.rs  ds4.rs  ds5.rs  main.rs  report.rs
man/: ds.1
src/: cli.rs  ds-gui.rs  ds.rs  ds1.rs  ds2.rs  ds3.rs  ds4.rs  ds5.rs  lib.rs  main.rs  report.rs  report_cli.rs  report_gui.rs
tests/: simple.rs
