[package]
name = "diskspace"
version = "0.5.0"
authors = ["Eric Jackson <swiftgist@gmail.com>"]
description = "Friendly command line utility for finding the largest files and directories"
repository = "https://github.com/swiftgist/diskspace"
categories = [ "command-line-utilities" ]
license = "GPL-3.0-only"
readme = "README.md"
edition = "2021"

[badges]
travis-ci = {repository = "swiftgist/diskspace"}

[dependencies]
clap = "2"
tempdir = "0.3.7"
colored = "1.8"

[[bin]]
doctest = false
name = "ds"
path = "src/main.rs"

[[bin]]
doctest = false
name = "dsx"
path = "learning/main.rs"

[lib]
doctest = false
name = "ds"
path = "src/lib.rs"
